# VikasAI

./: LICENSE  README.md  pyproject.toml
Libraries/TTS/: __init__.py
Voice/: Link.txt
