[project]
name = "vikasai"
version = "0.1.0"
description = ""
authors = [
    {name = "Kreedalu_Ji",email = "codewithdevansh1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "pyttsx3 (>=2.98,<3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
